parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    EXECUTE

Grammar

Rule 0     S' -> prog
Rule 1     prog -> v f MAIN CBIZQ st CBDER PUNTOCOMA
Rule 2     prog -> v MAIN CBIZQ st CBDER PUNTOCOMA
Rule 3     v -> v VAR tipo ID PUNTOCOMA
Rule 4     v -> v ARRAY tipo ID SBIZQ CTE SBDER PUNTOCOMA
Rule 5     v -> v ARRAY tipo ID SBIZQ CTE SBDER SBIZQ CTE SBDER PUNTOCOMA
Rule 6     v -> v ARRAY tipo ID SBIZQ CTE SBDER SBIZQ CTE SBDER SBIZQ CTE SBDER PUNTOCOMA
Rule 7     v -> <empty>
Rule 8     tipo -> INT
Rule 9     tipo -> DEC
Rule 10    f -> FUNCT ID CBIZQ st CBDER PUNTOCOMA f
Rule 11    f -> <empty>
Rule 12    st -> st LET variable IGUAL e PUNTOCOMA
Rule 13    st -> st ENTER SBIZQ variable SBDER PUNTOCOMA
Rule 14    st -> st DISPLAY SBIZQ MSG COMA variable SBDER PUNTOCOMA
Rule 15    st -> st DISPLAY SBIZQ MSG SBDER PUNTOCOMA
Rule 16    st -> st IF PARIZQ cond PARDER ifAux CBIZQ st CBDER PUNTOCOMA ifEndAux
Rule 17    st -> st IF PARIZQ cond PARDER ifAux CBIZQ st CBDER PUNTOCOMA ELSE ifAuxElse CBIZQ st CBDER PUNTOCOMA ifEndAux
Rule 18    st -> st auxIniWhile WHILE PARIZQ cond PARDER auxFauxWhile CBIZQ st CBDER PUNTOCOMA auxFinWhile
Rule 19    st -> st auxIniFor FOR PARIZQ cond auxFauxFor PUNTOCOMA e auxAssignFor PARDER CBIZQ st CBDER PUNTOCOMA auxFinFor
Rule 20    st -> st DO auxIniLoop CBIZQ st CBDER PUNTOCOMA auxFinLoop
Rule 21    st -> st LET variable IGUAL IF PARIZQ cond PARDER ifAux CBIZQ CTE PUNTOCOMA CBDER PUNTOCOMA ifEndAuxEsp
Rule 22    st -> st LET variable IGUAL IF PARIZQ cond PARDER ifAux CBIZQ CTE CBDER PUNTOCOMA ELSE ifAuxElse CBIZQ CTE CBDER PUNTOCOMA ifEndAux
Rule 23    st -> st BREAK auxFauxLoop PUNTOCOMA
Rule 24    st -> <empty>
Rule 25    ifAux -> <empty>
Rule 26    ifAuxElse -> <empty>
Rule 27    ifEndAux -> <empty>
Rule 28    ifEndAuxEsp -> <empty>
Rule 29    auxIniWhile -> <empty>
Rule 30    auxFauxWhile -> <empty>
Rule 31    auxFinWhile -> <empty>
Rule 32    auxIniFor -> <empty>
Rule 33    auxFauxFor -> <empty>
Rule 34    auxFinFor -> <empty>
Rule 35    auxAssignFor -> <empty>
Rule 36    auxIniLoop -> <empty>
Rule 37    auxFauxLoop -> <empty>
Rule 38    auxFinLoop -> <empty>
Rule 39    variable -> ID
Rule 40    variable -> ID SBIZQ CTE SBDER
Rule 41    variable -> ID SBIZQ CTE SBDER SBIZQ CTE SBDER
Rule 42    variable -> ID SBIZQ CTE SBDER SBIZQ CTE SBDER SBIZQ CTE SBDER
Rule 43    variable -> ID SBIZQ ID SBDER
Rule 44    variable -> ID SBIZQ ID SBDER SBIZQ ID SBDER
Rule 45    variable -> ID SBIZQ ID SBDER SBIZQ ID SBDER SBIZQ ID SBDER
Rule 46    cond -> oprel
Rule 47    cond -> cond AND oprel
Rule 48    cond -> cond OR oprel
Rule 49    oprel -> operador IGUALIGUAL operador
Rule 50    oprel -> operador DIFERENTE operador
Rule 51    oprel -> operador MAYOR operador
Rule 52    oprel -> operador MENOR operador
Rule 53    oprel -> operador MAYORQUE operador
Rule 54    oprel -> operador MENORQUE operador
Rule 55    oprel -> PARIZQ oprel PARDER
Rule 56    oprel -> NOT PARIZQ oprel PARDER
Rule 57    e -> e PLUS t
Rule 58    e -> e MENOS t
Rule 59    e -> t
Rule 60    t -> t MULT m
Rule 61    t -> t DIV m
Rule 62    t -> m
Rule 63    m -> PARIZQ e PARDER
Rule 64    m -> operador
Rule 65    operador -> CTE
Rule 66    operador -> FLOAT
Rule 67    operador -> ID
Rule 68    operador -> ID SBIZQ CTE SBDER
Rule 69    operador -> ID SBIZQ CTE SBDER SBIZQ CTE SBDER
Rule 70    operador -> ID SBIZQ CTE SBDER SBIZQ CTE SBDER SBIZQ CTE SBDER
Rule 71    operador -> ID SBIZQ ID SBDER
Rule 72    operador -> ID SBIZQ ID SBDER SBIZQ ID SBDER
Rule 73    operador -> ID SBIZQ ID SBDER SBIZQ ID SBDER SBIZQ ID SBDER

Terminals, with rules where they appear

AND                  : 47
ARRAY                : 4 5 6
BREAK                : 23
CBDER                : 1 2 10 16 17 17 18 19 20 21 22 22
CBIZQ                : 1 2 10 16 17 17 18 19 20 21 22 22
COMA                 : 14
CTE                  : 4 5 5 6 6 6 21 22 22 40 41 41 42 42 42 65 68 69 69 70 70 70
DEC                  : 9
DIFERENTE            : 50
DISPLAY              : 14 15
DIV                  : 61
DO                   : 20
ELSE                 : 17 22
ENTER                : 13
EXECUTE              : 
FLOAT                : 66
FOR                  : 19
FUNCT                : 10
ID                   : 3 4 5 6 10 39 40 41 42 43 43 44 44 44 45 45 45 45 67 68 69 70 71 71 72 72 72 73 73 73 73
IF                   : 16 17 21 22
IGUAL                : 12 21 22
IGUALIGUAL           : 49
INT                  : 8
LET                  : 12 21 22
MAIN                 : 1 2
MAYOR                : 51
MAYORQUE             : 53
MENOR                : 52
MENORQUE             : 54
MENOS                : 58
MSG                  : 14 15
MULT                 : 60
NOT                  : 56
OR                   : 48
PARDER               : 16 17 18 19 21 22 55 56 63
PARIZQ               : 16 17 18 19 21 22 55 56 63
PLUS                 : 57
PUNTOCOMA            : 1 2 3 4 5 6 10 12 13 14 15 16 17 17 18 19 19 20 21 21 22 22 23
SBDER                : 4 5 5 6 6 6 13 14 15 40 41 41 42 42 42 43 44 44 45 45 45 68 69 69 70 70 70 71 72 72 73 73 73
SBIZQ                : 4 5 5 6 6 6 13 14 15 40 41 41 42 42 42 43 44 44 45 45 45 68 69 69 70 70 70 71 72 72 73 73 73
VAR                  : 3
WHILE                : 18
error                : 

Nonterminals, with rules where they appear

auxAssignFor         : 19
auxFauxFor           : 19
auxFauxLoop          : 23
auxFauxWhile         : 18
auxFinFor            : 19
auxFinLoop           : 20
auxFinWhile          : 18
auxIniFor            : 19
auxIniLoop           : 20
auxIniWhile          : 18
cond                 : 16 17 18 19 21 22 47 48
e                    : 12 19 57 58 63
f                    : 1 10
ifAux                : 16 17 21 22
ifAuxElse            : 17 22
ifEndAux             : 16 17 22
ifEndAuxEsp          : 21
m                    : 60 61 62
operador             : 49 49 50 50 51 51 52 52 53 53 54 54 64
oprel                : 46 47 48 55 56
prog                 : 0
st                   : 1 2 10 12 13 14 15 16 16 17 17 17 18 18 19 19 20 20 21 22 23
t                    : 57 58 59 60 61
tipo                 : 3 4 5 6
v                    : 1 2 3 4 5 6
variable             : 12 13 14 21 22

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . v f MAIN CBIZQ st CBDER PUNTOCOMA
    (2) prog -> . v MAIN CBIZQ st CBDER PUNTOCOMA
    (3) v -> . v VAR tipo ID PUNTOCOMA
    (4) v -> . v ARRAY tipo ID SBIZQ CTE SBDER PUNTOCOMA
    (5) v -> . v ARRAY tipo ID SBIZQ CTE SBDER SBIZQ CTE SBDER PUNTOCOMA
    (6) v -> . v ARRAY tipo ID SBIZQ CTE SBDER SBIZQ CTE SBDER SBIZQ CTE SBDER PUNTOCOMA
    (7) v -> .

    MAIN            reduce using rule 7 (v -> .)
    VAR             reduce using rule 7 (v -> .)
    ARRAY           reduce using rule 7 (v -> .)
    FUNCT           reduce using rule 7 (v -> .)

    prog                           shift and go to state 1
    v                              shift and go to state 2

state 1

    (0) S' -> prog .



state 2

    (1) prog -> v . f MAIN CBIZQ st CBDER PUNTOCOMA
    (2) prog -> v . MAIN CBIZQ st CBDER PUNTOCOMA
    (3) v -> v . VAR tipo ID PUNTOCOMA
    (4) v -> v . ARRAY tipo ID SBIZQ CTE SBDER PUNTOCOMA
    (5) v -> v . ARRAY tipo ID SBIZQ CTE SBDER SBIZQ CTE SBDER PUNTOCOMA
    (6) v -> v . ARRAY tipo ID SBIZQ CTE SBDER SBIZQ CTE SBDER SBIZQ CTE SBDER PUNTOCOMA
    (10) f -> . FUNCT ID CBIZQ st CBDER PUNTOCOMA f
    (11) f -> .

  ! shift/reduce conflict for MAIN resolved as shift
    MAIN            shift and go to state 4
    VAR             shift and go to state 5
    ARRAY           shift and go to state 6
    FUNCT           shift and go to state 7

  ! MAIN            [ reduce using rule 11 (f -> .) ]

    f                              shift and go to state 3

state 3

    (1) prog -> v f . MAIN CBIZQ st CBDER PUNTOCOMA

    MAIN            shift and go to state 8


state 4

    (2) prog -> v MAIN . CBIZQ st CBDER PUNTOCOMA

    CBIZQ           shift and go to state 9


state 5

    (3) v -> v VAR . tipo ID PUNTOCOMA
    (8) tipo -> . INT
    (9) tipo -> . DEC

    INT             shift and go to state 11
    DEC             shift and go to state 12

    tipo                           shift and go to state 10

state 6

    (4) v -> v ARRAY . tipo ID SBIZQ CTE SBDER PUNTOCOMA
    (5) v -> v ARRAY . tipo ID SBIZQ CTE SBDER SBIZQ CTE SBDER PUNTOCOMA
    (6) v -> v ARRAY . tipo ID SBIZQ CTE SBDER SBIZQ CTE SBDER SBIZQ CTE SBDER PUNTOCOMA
    (8) tipo -> . INT
    (9) tipo -> . DEC

    INT             shift and go to state 11
    DEC             shift and go to state 12

    tipo                           shift and go to state 13

state 7

    (10) f -> FUNCT . ID CBIZQ st CBDER PUNTOCOMA f

    ID              shift and go to state 14


state 8

    (1) prog -> v f MAIN . CBIZQ st CBDER PUNTOCOMA

    CBIZQ           shift and go to state 15


state 9

    (2) prog -> v MAIN CBIZQ . st CBDER PUNTOCOMA
    (12) st -> . st LET variable IGUAL e PUNTOCOMA
    (13) st -> . st ENTER SBIZQ variable SBDER PUNTOCOMA
    (14) st -> . st DISPLAY SBIZQ MSG COMA variable SBDER PUNTOCOMA
    (15) st -> . st DISPLAY SBIZQ MSG SBDER PUNTOCOMA
    (16) st -> . st IF PARIZQ cond PARDER ifAux CBIZQ st CBDER PUNTOCOMA ifEndAux
    (17) st -> . st IF PARIZQ cond PARDER ifAux CBIZQ st CBDER PUNTOCOMA ELSE ifAuxElse CBIZQ st CBDER PUNTOCOMA ifEndAux
    (18) st -> . st auxIniWhile WHILE PARIZQ cond PARDER auxFauxWhile CBIZQ st CBDER PUNTOCOMA auxFinWhile
    (19) st -> . st auxIniFor FOR PARIZQ cond auxFauxFor PUNTOCOMA e auxAssignFor PARDER CBIZQ st CBDER PUNTOCOMA auxFinFor
    (20) st -> . st DO auxIniLoop CBIZQ st CBDER PUNTOCOMA auxFinLoop
    (21) st -> . st LET variable IGUAL IF PARIZQ cond PARDER ifAux CBIZQ CTE PUNTOCOMA CBDER PUNTOCOMA ifEndAuxEsp
    (22) st -> . st LET variable IGUAL IF PARIZQ cond PARDER ifAux CBIZQ CTE CBDER PUNTOCOMA ELSE ifAuxElse CBIZQ CTE CBDER PUNTOCOMA ifEndAux
    (23) st -> . st BREAK auxFauxLoop PUNTOCOMA
    (24) st -> .

    CBDER           reduce using rule 24 (st -> .)
    LET             reduce using rule 24 (st -> .)
    ENTER           reduce using rule 24 (st -> .)
    DISPLAY         reduce using rule 24 (st -> .)
    IF              reduce using rule 24 (st -> .)
    DO              reduce using rule 24 (st -> .)
    BREAK           reduce using rule 24 (st -> .)
    WHILE           reduce using rule 24 (st -> .)
    FOR             reduce using rule 24 (st -> .)

    st                             shift and go to state 16

state 10

    (3) v -> v VAR tipo . ID PUNTOCOMA

    ID              shift and go to state 17


state 11

    (8) tipo -> INT .

    ID              reduce using rule 8 (tipo -> INT .)


state 12

    (9) tipo -> DEC .

    ID              reduce using rule 9 (tipo -> DEC .)


state 13

    (4) v -> v ARRAY tipo . ID SBIZQ CTE SBDER PUNTOCOMA
    (5) v -> v ARRAY tipo . ID SBIZQ CTE SBDER SBIZQ CTE SBDER PUNTOCOMA
    (6) v -> v ARRAY tipo . ID SBIZQ CTE SBDER SBIZQ CTE SBDER SBIZQ CTE SBDER PUNTOCOMA

    ID              shift and go to state 18


state 14

    (10) f -> FUNCT ID . CBIZQ st CBDER PUNTOCOMA f

    CBIZQ           shift and go to state 19


state 15

    (1) prog -> v f MAIN CBIZQ . st CBDER PUNTOCOMA
    (12) st -> . st LET variable IGUAL e PUNTOCOMA
    (13) st -> . st ENTER SBIZQ variable SBDER PUNTOCOMA
    (14) st -> . st DISPLAY SBIZQ MSG COMA variable SBDER PUNTOCOMA
    (15) st -> . st DISPLAY SBIZQ MSG SBDER PUNTOCOMA
    (16) st -> . st IF PARIZQ cond PARDER ifAux CBIZQ st CBDER PUNTOCOMA ifEndAux
    (17) st -> . st IF PARIZQ cond PARDER ifAux CBIZQ st CBDER PUNTOCOMA ELSE ifAuxElse CBIZQ st CBDER PUNTOCOMA ifEndAux
    (18) st -> . st auxIniWhile WHILE PARIZQ cond PARDER auxFauxWhile CBIZQ st CBDER PUNTOCOMA auxFinWhile
    (19) st -> . st auxIniFor FOR PARIZQ cond auxFauxFor PUNTOCOMA e auxAssignFor PARDER CBIZQ st CBDER PUNTOCOMA auxFinFor
    (20) st -> . st DO auxIniLoop CBIZQ st CBDER PUNTOCOMA auxFinLoop
    (21) st -> . st LET variable IGUAL IF PARIZQ cond PARDER ifAux CBIZQ CTE PUNTOCOMA CBDER PUNTOCOMA ifEndAuxEsp
    (22) st -> . st LET variable IGUAL IF PARIZQ cond PARDER ifAux CBIZQ CTE CBDER PUNTOCOMA ELSE ifAuxElse CBIZQ CTE CBDER PUNTOCOMA ifEndAux
    (23) st -> . st BREAK auxFauxLoop PUNTOCOMA
    (24) st -> .

    CBDER           reduce using rule 24 (st -> .)
    LET             reduce using rule 24 (st -> .)
    ENTER           reduce using rule 24 (st -> .)
    DISPLAY         reduce using rule 24 (st -> .)
    IF              reduce using rule 24 (st -> .)
    DO              reduce using rule 24 (st -> .)
    BREAK           reduce using rule 24 (st -> .)
    WHILE           reduce using rule 24 (st -> .)
    FOR             reduce using rule 24 (st -> .)

    st                             shift and go to state 20

state 16

    (2) prog -> v MAIN CBIZQ st . CBDER PUNTOCOMA
    (12) st -> st . LET variable IGUAL e PUNTOCOMA
    (13) st -> st . ENTER SBIZQ variable SBDER PUNTOCOMA
    (14) st -> st . DISPLAY SBIZQ MSG COMA variable SBDER PUNTOCOMA
    (15) st -> st . DISPLAY SBIZQ MSG SBDER PUNTOCOMA
    (16) st -> st . IF PARIZQ cond PARDER ifAux CBIZQ st CBDER PUNTOCOMA ifEndAux
    (17) st -> st . IF PARIZQ cond PARDER ifAux CBIZQ st CBDER PUNTOCOMA ELSE ifAuxElse CBIZQ st CBDER PUNTOCOMA ifEndAux
    (18) st -> st . auxIniWhile WHILE PARIZQ cond PARDER auxFauxWhile CBIZQ st CBDER PUNTOCOMA auxFinWhile
    (19) st -> st . auxIniFor FOR PARIZQ cond auxFauxFor PUNTOCOMA e auxAssignFor PARDER CBIZQ st CBDER PUNTOCOMA auxFinFor
    (20) st -> st . DO auxIniLoop CBIZQ st CBDER PUNTOCOMA auxFinLoop
    (21) st -> st . LET variable IGUAL IF PARIZQ cond PARDER ifAux CBIZQ CTE PUNTOCOMA CBDER PUNTOCOMA ifEndAuxEsp
    (22) st -> st . LET variable IGUAL IF PARIZQ cond PARDER ifAux CBIZQ CTE CBDER PUNTOCOMA ELSE ifAuxElse CBIZQ CTE CBDER PUNTOCOMA ifEndAux
    (23) st -> st . BREAK auxFauxLoop PUNTOCOMA
    (29) auxIniWhile -> .
    (32) auxIniFor -> .

    CBDER           shift and go to state 21
    LET             shift and go to state 22
    ENTER           shift and go to state 23
    DISPLAY         shift and go to state 24
    IF              shift and go to state 25
    DO              shift and go to state 28
    BREAK           shift and go to state 29
    WHILE           reduce using rule 29 (auxIniWhile -> .)
    FOR             reduce using rule 32 (auxIniFor -> .)

    auxIniWhile                    shift and go to state 26
    auxIniFor                      shift and go to state 27

state 17

    (3) v -> v VAR tipo ID . PUNTOCOMA

    PUNTOCOMA       shift and go to state 30


state 18

    (4) v -> v ARRAY tipo ID . SBIZQ CTE SBDER PUNTOCOMA
    (5) v -> v ARRAY tipo ID . SBIZQ CTE SBDER SBIZQ CTE SBDER PUNTOCOMA
    (6) v -> v ARRAY tipo ID . SBIZQ CTE SBDER SBIZQ CTE SBDER SBIZQ CTE SBDER PUNTOCOMA

    SBIZQ           shift and go to state 31


state 19

    (10) f -> FUNCT ID CBIZQ . st CBDER PUNTOCOMA f
    (12) st -> . st LET variable IGUAL e PUNTOCOMA
    (13) st -> . st ENTER SBIZQ variable SBDER PUNTOCOMA
    (14) st -> . st DISPLAY SBIZQ MSG COMA variable SBDER PUNTOCOMA
    (15) st -> . st DISPLAY SBIZQ MSG SBDER PUNTOCOMA
    (16) st -> . st IF PARIZQ cond PARDER ifAux CBIZQ st CBDER PUNTOCOMA ifEndAux
    (17) st -> . st IF PARIZQ cond PARDER ifAux CBIZQ st CBDER PUNTOCOMA ELSE ifAuxElse CBIZQ st CBDER PUNTOCOMA ifEndAux
    (18) st -> . st auxIniWhile WHILE PARIZQ cond PARDER auxFauxWhile CBIZQ st CBDER PUNTOCOMA auxFinWhile
    (19) st -> . st auxIniFor FOR PARIZQ cond auxFauxFor PUNTOCOMA e auxAssignFor PARDER CBIZQ st CBDER PUNTOCOMA auxFinFor
    (20) st -> . st DO auxIniLoop CBIZQ st CBDER PUNTOCOMA auxFinLoop
    (21) st -> . st LET variable IGUAL IF PARIZQ cond PARDER ifAux CBIZQ CTE PUNTOCOMA CBDER PUNTOCOMA ifEndAuxEsp
    (22) st -> . st LET variable IGUAL IF PARIZQ cond PARDER ifAux CBIZQ CTE CBDER PUNTOCOMA ELSE ifAuxElse CBIZQ CTE CBDER PUNTOCOMA ifEndAux
    (23) st -> . st BREAK auxFauxLoop PUNTOCOMA
    (24) st -> .

    CBDER           reduce using rule 24 (st -> .)
    LET             reduce using rule 24 (st -> .)
    ENTER           reduce using rule 24 (st -> .)
    DISPLAY         reduce using rule 24 (st -> .)
    IF              reduce using rule 24 (st -> .)
    DO              reduce using rule 24 (st -> .)
    BREAK           reduce using rule 24 (st -> .)
    WHILE           reduce using rule 24 (st -> .)
    FOR             reduce using rule 24 (st -> .)

    st                             shift and go to state 32

state 20

    (1) prog -> v f MAIN CBIZQ st . CBDER PUNTOCOMA
    (12) st -> st . LET variable IGUAL e PUNTOCOMA
    (13) st -> st . ENTER SBIZQ variable SBDER PUNTOCOMA
    (14) st -> st . DISPLAY SBIZQ MSG COMA variable SBDER PUNTOCOMA
    (15) st -> st . DISPLAY SBIZQ MSG SBDER PUNTOCOMA
    (16) st -> st . IF PARIZQ cond PARDER ifAux CBIZQ st CBDER PUNTOCOMA ifEndAux
    (17) st -> st . IF PARIZQ cond PARDER ifAux CBIZQ st CBDER PUNTOCOMA ELSE ifAuxElse CBIZQ st CBDER PUNTOCOMA ifEndAux
    (18) st -> st . auxIniWhile WHILE PARIZQ cond PARDER auxFauxWhile CBIZQ st CBDER PUNTOCOMA auxFinWhile
    (19) st -> st . auxIniFor FOR PARIZQ cond auxFauxFor PUNTOCOMA e auxAssignFor PARDER CBIZQ st CBDER PUNTOCOMA auxFinFor
    (20) st -> st . DO auxIniLoop CBIZQ st CBDER PUNTOCOMA auxFinLoop
    (21) st -> st . LET variable IGUAL IF PARIZQ cond PARDER ifAux CBIZQ CTE PUNTOCOMA CBDER PUNTOCOMA ifEndAuxEsp
    (22) st -> st . LET variable IGUAL IF PARIZQ cond PARDER ifAux CBIZQ CTE CBDER PUNTOCOMA ELSE ifAuxElse CBIZQ CTE CBDER PUNTOCOMA ifEndAux
    (23) st -> st . BREAK auxFauxLoop PUNTOCOMA
    (29) auxIniWhile -> .
    (32) auxIniFor -> .

    CBDER           shift and go to state 33
    LET             shift and go to state 22
    ENTER           shift and go to state 23
    DISPLAY         shift and go to state 24
    IF              shift and go to state 25
    DO              shift and go to state 28
    BREAK           shift and go to state 29
    WHILE           reduce using rule 29 (auxIniWhile -> .)
    FOR             reduce using rule 32 (auxIniFor -> .)

    auxIniWhile                    shift and go to state 26
    auxIniFor                      shift and go to state 27

state 21

    (2) prog -> v MAIN CBIZQ st CBDER . PUNTOCOMA

    PUNTOCOMA       shift and go to state 34


state 22

    (12) st -> st LET . variable IGUAL e PUNTOCOMA
    (21) st -> st LET . variable IGUAL IF PARIZQ cond PARDER ifAux CBIZQ CTE PUNTOCOMA CBDER PUNTOCOMA ifEndAuxEsp
    (22) st -> st LET . variable IGUAL IF PARIZQ cond PARDER ifAux CBIZQ CTE CBDER PUNTOCOMA ELSE ifAuxElse CBIZQ CTE CBDER PUNTOCOMA ifEndAux
    (39) variable -> . ID
    (40) variable -> . ID SBIZQ CTE SBDER
    (41) variable -> . ID SBIZQ CTE SBDER SBIZQ CTE SBDER
    (42) variable -> . ID SBIZQ CTE SBDER SBIZQ CTE SBDER SBIZQ CTE SBDER
    (43) variable -> . ID SBIZQ ID SBDER
    (44) variable -> . ID SBIZQ ID SBDER SBIZQ ID SBDER
    (45) variable -> . ID SBIZQ ID SBDER SBIZQ ID SBDER SBIZQ ID SBDER

    ID              shift and go to state 36

    variable                       shift and go to state 35

state 23

    (13) st -> st ENTER . SBIZQ variable SBDER PUNTOCOMA

    SBIZQ           shift and go to state 37


state 24

    (14) st -> st DISPLAY . SBIZQ MSG COMA variable SBDER PUNTOCOMA
    (15) st -> st DISPLAY . SBIZQ MSG SBDER PUNTOCOMA

    SBIZQ           shift and go to state 38


state 25

    (16) st -> st IF . PARIZQ cond PARDER ifAux CBIZQ st CBDER PUNTOCOMA ifEndAux
    (17) st -> st IF . PARIZQ cond PARDER ifAux CBIZQ st CBDER PUNTOCOMA ELSE ifAuxElse CBIZQ st CBDER PUNTOCOMA ifEndAux

    PARIZQ          shift and go to state 39


state 26

    (18) st -> st auxIniWhile . WHILE PARIZQ cond PARDER auxFauxWhile CBIZQ st CBDER PUNTOCOMA auxFinWhile

    WHILE           shift and go to state 40


state 27

    (19) st -> st auxIniFor . FOR PARIZQ cond auxFauxFor PUNTOCOMA e auxAssignFor PARDER CBIZQ st CBDER PUNTOCOMA auxFinFor

    FOR             shift and go to state 41


state 28

    (20) st -> st DO . auxIniLoop CBIZQ st CBDER PUNTOCOMA auxFinLoop
    (36) auxIniLoop -> .

    CBIZQ           reduce using rule 36 (auxIniLoop -> .)

    auxIniLoop                     shift and go to state 42

state 29

    (23) st -> st BREAK . auxFauxLoop PUNTOCOMA
    (37) auxFauxLoop -> .

    PUNTOCOMA       reduce using rule 37 (auxFauxLoop -> .)

    auxFauxLoop                    shift and go to state 43

state 30

    (3) v -> v VAR tipo ID PUNTOCOMA .

    MAIN            reduce using rule 3 (v -> v VAR tipo ID PUNTOCOMA .)
    VAR             reduce using rule 3 (v -> v VAR tipo ID PUNTOCOMA .)
    ARRAY           reduce using rule 3 (v -> v VAR tipo ID PUNTOCOMA .)
    FUNCT           reduce using rule 3 (v -> v VAR tipo ID PUNTOCOMA .)


state 31

    (4) v -> v ARRAY tipo ID SBIZQ . CTE SBDER PUNTOCOMA
    (5) v -> v ARRAY tipo ID SBIZQ . CTE SBDER SBIZQ CTE SBDER PUNTOCOMA
    (6) v -> v ARRAY tipo ID SBIZQ . CTE SBDER SBIZQ CTE SBDER SBIZQ CTE SBDER PUNTOCOMA

    CTE             shift and go to state 44


state 32

    (10) f -> FUNCT ID CBIZQ st . CBDER PUNTOCOMA f
    (12) st -> st . LET variable IGUAL e PUNTOCOMA
    (13) st -> st . ENTER SBIZQ variable SBDER PUNTOCOMA
    (14) st -> st . DISPLAY SBIZQ MSG COMA variable SBDER PUNTOCOMA
    (15) st -> st . DISPLAY SBIZQ MSG SBDER PUNTOCOMA
    (16) st -> st . IF PARIZQ cond PARDER ifAux CBIZQ st CBDER PUNTOCOMA ifEndAux
    (17) st -> st . IF PARIZQ cond PARDER ifAux CBIZQ st CBDER PUNTOCOMA ELSE ifAuxElse CBIZQ st CBDER PUNTOCOMA ifEndAux
    (18) st -> st . auxIniWhile WHILE PARIZQ cond PARDER auxFauxWhile CBIZQ st CBDER PUNTOCOMA auxFinWhile
    (19) st -> st . auxIniFor FOR PARIZQ cond auxFauxFor PUNTOCOMA e auxAssignFor PARDER CBIZQ st CBDER PUNTOCOMA auxFinFor
    (20) st -> st . DO auxIniLoop CBIZQ st CBDER PUNTOCOMA auxFinLoop
    (21) st -> st . LET variable IGUAL IF PARIZQ cond PARDER ifAux CBIZQ CTE PUNTOCOMA CBDER PUNTOCOMA ifEndAuxEsp
    (22) st -> st . LET variable IGUAL IF PARIZQ cond PARDER ifAux CBIZQ CTE CBDER PUNTOCOMA ELSE ifAuxElse CBIZQ CTE CBDER PUNTOCOMA ifEndAux
    (23) st -> st . BREAK auxFauxLoop PUNTOCOMA
    (29) auxIniWhile -> .
    (32) auxIniFor -> .

    CBDER           shift and go to state 45
    LET             shift and go to state 22
    ENTER           shift and go to state 23
    DISPLAY         shift and go to state 24
    IF              shift and go to state 25
    DO              shift and go to state 28
    BREAK           shift and go to state 29
    WHILE           reduce using rule 29 (auxIniWhile -> .)
    FOR             reduce using rule 32 (auxIniFor -> .)

    auxIniWhile                    shift and go to state 26
    auxIniFor                      shift and go to state 27

state 33

    (1) prog -> v f MAIN CBIZQ st CBDER . PUNTOCOMA

    PUNTOCOMA       shift and go to state 46


state 34

    (2) prog -> v MAIN CBIZQ st CBDER PUNTOCOMA .

    $end            reduce using rule 2 (prog -> v MAIN CBIZQ st CBDER PUNTOCOMA .)


state 35

    (12) st -> st LET variable . IGUAL e PUNTOCOMA
    (21) st -> st LET variable . IGUAL IF PARIZQ cond PARDER ifAux CBIZQ CTE PUNTOCOMA CBDER PUNTOCOMA ifEndAuxEsp
    (22) st -> st LET variable . IGUAL IF PARIZQ cond PARDER ifAux CBIZQ CTE CBDER PUNTOCOMA ELSE ifAuxElse CBIZQ CTE CBDER PUNTOCOMA ifEndAux

    IGUAL           shift and go to state 47


state 36

    (39) variable -> ID .
    (40) variable -> ID . SBIZQ CTE SBDER
    (41) variable -> ID . SBIZQ CTE SBDER SBIZQ CTE SBDER
    (42) variable -> ID . SBIZQ CTE SBDER SBIZQ CTE SBDER SBIZQ CTE SBDER
    (43) variable -> ID . SBIZQ ID SBDER
    (44) variable -> ID . SBIZQ ID SBDER SBIZQ ID SBDER
    (45) variable -> ID . SBIZQ ID SBDER SBIZQ ID SBDER SBIZQ ID SBDER

    IGUAL           reduce using rule 39 (variable -> ID .)
    SBDER           reduce using rule 39 (variable -> ID .)
    SBIZQ           shift and go to state 48


state 37

    (13) st -> st ENTER SBIZQ . variable SBDER PUNTOCOMA
    (39) variable -> . ID
    (40) variable -> . ID SBIZQ CTE SBDER
    (41) variable -> . ID SBIZQ CTE SBDER SBIZQ CTE SBDER
    (42) variable -> . ID SBIZQ CTE SBDER SBIZQ CTE SBDER SBIZQ CTE SBDER
    (43) variable -> . ID SBIZQ ID SBDER
    (44) variable -> . ID SBIZQ ID SBDER SBIZQ ID SBDER
    (45) variable -> . ID SBIZQ ID SBDER SBIZQ ID SBDER SBIZQ ID SBDER

    ID              shift and go to state 36

    variable                       shift and go to state 49

state 38

    (14) st -> st DISPLAY SBIZQ . MSG COMA variable SBDER PUNTOCOMA
    (15) st -> st DISPLAY SBIZQ . MSG SBDER PUNTOCOMA

    MSG             shift and go to state 50


state 39

    (16) st -> st IF PARIZQ . cond PARDER ifAux CBIZQ st CBDER PUNTOCOMA ifEndAux
    (17) st -> st IF PARIZQ . cond PARDER ifAux CBIZQ st CBDER PUNTOCOMA ELSE ifAuxElse CBIZQ st CBDER PUNTOCOMA ifEndAux
    (46) cond -> . oprel
    (47) cond -> . cond AND oprel
    (48) cond -> . cond OR oprel
    (49) oprel -> . operador IGUALIGUAL operador
    (50) oprel -> . operador DIFERENTE operador
    (51) oprel -> . operador MAYOR operador
    (52) oprel -> . operador MENOR operador
    (53) oprel -> . operador MAYORQUE operador
    (54) oprel -> . operador MENORQUE operador
    (55) oprel -> . PARIZQ oprel PARDER
    (56) oprel -> . NOT PARIZQ oprel PARDER
    (65) operador -> . CTE
    (66) operador -> . FLOAT
    (67) operador -> . ID
    (68) operador -> . ID SBIZQ CTE SBDER
    (69) operador -> . ID SBIZQ CTE SBDER SBIZQ CTE SBDER
    (70) operador -> . ID SBIZQ CTE SBDER SBIZQ CTE SBDER SBIZQ CTE SBDER
    (71) operador -> . ID SBIZQ ID SBDER
    (72) operador -> . ID SBIZQ ID SBDER SBIZQ ID SBDER
    (73) operador -> . ID SBIZQ ID SBDER SBIZQ ID SBDER SBIZQ ID SBDER

    PARIZQ          shift and go to state 51
    NOT             shift and go to state 55
    CTE             shift and go to state 56
    FLOAT           shift and go to state 57
    ID              shift and go to state 58

    cond                           shift and go to state 52
    oprel                          shift and go to state 53
    operador                       shift and go to state 54

state 40

